--- a/test/fixtures/tokens.yml
+++ b/test/fixtures/tokens.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: tokens
+#
+#  id            :integer          not null, primary key
+#  access_token  :string
+#  refresh_token :string
+#  expires_at    :datetime
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
