--- a/test/fixtures/messages.yml
+++ b/test/fixtures/messages.yml
@@ -10,6 +10,7 @@
 #  sent       :boolean          default(FALSE)
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  token_id   :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
