--- a/test/fixtures/tokens.yml
+++ b/test/fixtures/tokens.yml
@@ -15,4 +15,4 @@
 one:
   access_token: ya29.QgGB-CGYt_K5xrY8A1qfn0wn5FUYOIx__zdvhPm3iBIUnWcFvuW9lWLbXG67t8d76BSm3zwVvExi3Q
   refresh_token: 1/r84Ss0vE9qMVi9xTgo8PMUgMX_9qP8FW_NcPj5qWQa0MEudVrK5jSpoR30zcRFq6
-  expires_at: 1427404762
+  expires_at: 1970-01-17 07:30:04
